--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Boilerplate</title>
   <link href="favicon.ico" rel="shortcut icon" />
+  <link href="app/styles/tailwind/index.css" rel="stylesheet" preload="true" />
 </head>
 
 <body>
