--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Boilerplate</title>
+  <title>ts-boilerplate</title>
   <link href="favicon.ico" rel="shortcut icon" />
   <link href="app/styles/tailwind/index.css" rel="stylesheet" preload="true" />
 </head>
